<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/q_all"
        android:title="@string/all">
    </item>
    <item
        android:id="@+id/q_1"
        android:title="@string/quan1">
    </item>
    <item
        android:id="@+id/q_2"
        android:title="@string/quan2">
    </item>
    <item
        android:id="@+id/q_3"
        android:title="@string/quan3">
    </item>
    <item
        android:id="@+id/q_4"
        android:title="@string/quan4">
    </item>
    <item
        android:id="@+id/q_5"
        android:title="@string/quan5">
    </item>
    <item
        android:id="@+id/q_6"
        android:title="@string/quan6">
    </item>
    <item
        android:id="@+id/q_7"
        android:title="@string/quan7">
    </item>
    <item
        android:id="@+id/q_8"
        android:title="@string/quan8">
    </item>
    <item
        android:id="@+id/q_9"
        android:title="@string/quan9">
    </item>
    <item
        android:id="@+id/q_10"
        android:title="@string/quan10">
    </item>
    <item
        android:id="@+id/q_11"
        android:title="@string/quan11">
    </item>
    <item
        android:id="@+id/q_12"
        android:title="@string/quan12">
    </item>
    <item
        android:id="@+id/q_gv"
        android:title="@string/quan_govap">
    </item>
    <item
        android:id="@+id/q_tb"
        android:title="@string/quan_tanbinh">
    </item>
    <item
        android:id="@+id/q_tp"
        android:title="@string/quan_tanphu">
    </item>
    <item
        android:id="@+id/q_bth"
        android:title="@string/quan_binhthanh">
    </item>
    <item
        android:id="@+id/q_pn"
        android:title="@string/quan_phunhuan">
    </item>
    <item
        android:id="@+id/q_td"
        android:title="@string/quan_thuduc">
    </item>
    <item
        android:id="@+id/q_bta"
        android:title="@string/quan_binhtan">
    </item>

</menu>