<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_page"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_dialog_1"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="15dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_as"
            android:textColor="@color/text_color_1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_color_1" >
        </LinearLayout>
  
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rd_guest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guest"
                    android:textColor="@color/text_color_1" />

                <RadioButton
                    android:id="@+id/rd_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/stadium_owner"
                    android:textColor="@color/text_color_1" />
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_textbox_1_default"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/text_color_1" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_textbox_1_default"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/text_color_1" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button_1"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_login"
        android:layout_centerInParent="true"
        android:textSize="35sp"
        android:text="@string/title"
        android:typeface="serif"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="@color/white"
         />

</RelativeLayout>